2003-03-31  Darin Adler  <darin@apple.com>

        Reviewed by John.

	- fixed 3213093 -- accessing menu items immediately after launch causes crash when about:blank is homepage

        * khtml/khtmlview.cpp: (isSubmitImage): Add check for node of 0.
        
        - fixed 3211461 -- crash in KWQListIteratorImpl tabbing through w3c test page

        * kwq/KWQKHTMLPart.h: Added childFrameForPart function, better than KHTMLPart::frame because it works
        for HTML frames inside objects as well as plain old HTML frames.
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::childFrameForPart): Like KHTMLPart::frame, but looks through m_objects too.
        (KWQKHTMLPart::nextKeyViewInFrameHierarchy): Use childFrameForPart instead of frame function.

2003-03-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	- fixed 3206524 - incyte.com "load properties" function does not work
	
        * khtml/html/html_documentimpl.cpp:
        (HTMLDocumentImpl::close): Make sure to clear the tokenizer before firing
	the onLoad handler, otherwise document.write from inside an onLoad handler
	will fail.
        * khtml/xml/dom_docimpl.h:
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::close): Call closeInternal.
        (DocumentImpl::closeInternal): New version of close that allows
	bypassing the tokenizer null check, in case we already deleted the
	tokenizer/

2003-03-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Trey.

	- fixed 3169064 - can't search at lonelyplanet.com; onSubmit handler fails due to problem addressing radio button
	
        * khtml/ecma/kjs_dom.cpp:
        (DOMNamedNodesCollection::tryGet): Allow lookup by id as well as
	by integer index.

2003-03-29  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Trey.

	- fixed 3138427 - new window opened by javascript is too small for popcap.com game

        * khtml/ecma/kjs_window.cpp: