@@ -1,3 +1,13 @@
+2003-03-31  David Hyatt  <hyatt@apple.com>
+
+	First-letter can be floated.  Make sure we mutate the display
+	to BLOCK so that we don't make an inline when we're floating.
+	Fixes bug 3186004.
+	
+        Reviewed by darin
+
+        * khtml/rendering/render_block.cpp:
+
 2003-03-31  Darin Adler  <darin@apple.com>
 
         Reviewed by John.
